--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -26,7 +26,7 @@
         <div class="col-12"> &nbsp </div>
         <div class="col-sm"></div>
         <div class="col-sm">
-        <form action="/result" method="POST">
+        <form action="/search" method="GET">
           <div class="form-group align-items-center">
               <div class="input-group">
               <input type="text" class="form-control mb-2" name="code" id="text5a" placeholder="銘柄コード">
