--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -46,52 +46,51 @@
 		<div class="col-6">
 		<table class="table table-bordered">
 		<tr>
-		<td class="table-primary">水産・農林業</td>
-		<td class="table-warning">鉱業</td>
-		<td class="table-success">建設業</td>
-		<td class="table-danger">食料品</td>
-		<td class="table-danger">繊維製品</td>
+		<td class="table-primary"><a href="/buisnesstype/1"><strong>水産・農林業</strong></a></td>
+		<td class="table-warning"><a href="/buisnesstype/2"><strong>鉱業</strong></a></td>
+		<td class="table-success"><a href="/buisnesstype/3"><strong>建設業</td>
+		<td class="table-danger"><a href="/buisnesstype/4"><strong>食料品</td>
+		<td class="table-danger"><a href="/buisnesstype/5"><strong>繊維製品</td>
 		</tr>
 		<tr>
-		<td class="table-danger">パルプ・紙</td>
-		<td class="table-danger">化学</td>
-		<td class="table-danger">医薬品</td>
-		<td class="table-danger">石油</td>
-		<td class="table-danger">石炭製品</td>
+		<td class="table-danger"><a href="/buisnesstype/6"><strong>パルプ・紙</td>
+		<td class="table-danger"><a href="/buisnesstype/7"><strong>化学</td>
+		<td class="table-danger"><a href="/buisnesstype/8"><strong>医薬品</td>
+		<td class="table-danger"><a href="/buisnesstype/9"><strong>石油・石炭製品</td>
+		<td class="table-danger"><a href="/buisnesstype/11"><strong>ゴム製品</td>
 		</tr>
 		<tr>
-		<td class="table-danger">ゴム製品</td>
-		<td class="table-danger">ガラス・土石製品</td>
-		<td class="table-danger">鉄鋼</td>
-		<td class="table-danger">非鉄金属</td>
-		<td class="table-danger">金属製品</td>
+		<td class="table-danger"><a href="/buisnesstype/12"><strong>ガラス・土石製品</td>
+		<td class="table-danger"><a href="/buisnesstype/13"><strong>鉄鋼</td>
+		<td class="table-danger"><a href="/buisnesstype/14"><strong>非鉄金属</td>
+		<td class="table-danger"><a href="/buisnesstype/15"><strong>金属製品</td>
+		<td class="table-danger"><a href="/buisnesstype/16"><strong>機械</td>
 		</tr>
 		<tr>
-		<td class="table-danger">機械</td>
-		<td class="table-danger">電気機器</td>
-		<td class="table-danger">輸送用機器</td>
-		<td class="table-danger">精密機器</td>
-		<td class="table-danger">その他製品</td>
+		<td class="table-danger"><a href="/buisnesstype/17"><strong>電気機器</td>
+		<td class="table-danger"><a href="/buisnesstype/18"><strong>輸送用機器</td>
+		<td class="table-danger"><a href="/buisnesstype/19"><strong>精密機器</td>
+		<td class="table-danger"><a href="/buisnesstype/20"><strong>その他製品</td>
+		<td class="table-warning"><a href="/buisnesstype/21"><strong>電気・ガス業</td>
 		</tr>
 		<tr>
-		<td class="table-warning">電気・ガス業</td>
-		<td class="table-info">陸運業</td>
-		<td class="table-info">海運業</td>
-		<td class="table-info">空運業</td>
-		<td class="table-info">倉庫・運輸関連</td>
+		<td class="table-info"><a href="/buisnesstype/22"><strong>陸運業</td>
+		<td class="table-info"><a href="/buisnesstype/23"><strong>海運業</td>
+		<td class="table-info"><a href="/buisnesstype/24"><strong>空運業</td>
+		<td class="table-info"><a href="/buisnesstype/25"><strong>倉庫・運輸関連</td>
+		<td class="table-primary"><a href="/buisnesstype/26"><strong>情報・通信業</td>
 		</tr>
 		<tr>
-		<td class="table-primary">情報・通信業</td>
-		<td class="table-success">卸売業</td>
-		<td class="table-success">小売業</td>
-		<td class="table-danger">銀行業</td>
-		<td class="table-danger">証券、商品先物取引業</td>
+		<td class="table-success"><a href="/buisnesstype/27"><strong>卸売業</td>
+		<td class="table-success"><a href="/buisnesstype/28"><strong>小売業</td>
+		<td class="table-danger"><a href="/buisnesstype/29"><strong>銀行業</td>
+		<td class="table-danger"><a href="/buisnesstype/30"><strong>証券、商品先物取引業</td>
+		<td class="table-danger"><a href="/buisnesstype/31"><strong>保険業</td>
 		</tr>
 		<tr>
-		<td class="table-danger">保険業</td>
-		<td class="table-danger">その他金融業</td>
-		<td class="table-info">不動産業</td>
-		<td class="table-info">サービス業</td>
+		<td class="table-danger"><a href="/buisnesstype/32"><strong>その他金融業</td>
+		<td class="table-info"><a href="/buisnesstype/33"><strong>不動産業</td>
+		<td class="table-info"><a href="/buisnesstype/34"><strong>サービス業</td>
 		<td class="table-light"></td>
 		</tr>
 		</table>
@@ -99,12 +98,7 @@
         </div>
 		</div>
     </div>
-	
-	{% for edinetcodeinfo in all_edinetcodeinfo %}
-    <p align="center">{{edinetcodeinfo.edinetcode}}：{{edinetcodeinfo.submitter}}（{{edinetcodeinfo.securitiescode}}）</p>
-    {% endfor %}
-	
-	
+
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
